--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-hacker
-title: CODE
+title: Area 51 Simulator™
 description: feel free to add this website as your favorite! thanks!
